fix: truncate text overflow with ellipsis in EntityVariableEditor

--- a/src/editor/entity-editor/EntityVariableEditor.scss
+++ b/src/editor/entity-editor/EntityVariableEditor.scss
@@ -24,6 +24,8 @@
 
     .description {
       padding: 24px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .add-variable {
